<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_travel"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="60dp" >

    <com.csform.android.uiapptemplate.font.MaterialDesignIconsTextView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="36dp"
        android:text="@string/fontello_logo"
        android:textColor="@color/material_cyan_A700"
        android:textSize="96dp"
        tools:ignore="SpUsage" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_travel_transparent_background"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="16dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical" >

            <com.csform.android.uiapptemplate.font.MaterialDesignIconsTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/fontello_user"
                android:textColor="@color/material_cyan_A700"
                android:textSize="16dp"
                tools:ignore="SpUsage" />

            <com.csform.android.uiapptemplate.view.FloatLabeledEditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                app:fletFloatingHint="@string/username"
                app:fletHintTextColor="@color/material_cyan_A700"
                app:fletSingleLine="true"
                app:fletTextBackground="@drawable/edit_text_background_accent"
                app:fletTextColor="@color/main_color_grey_700" >
            </com.csform.android.uiapptemplate.view.FloatLabeledEditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:gravity="center_vertical" >

            <com.csform.android.uiapptemplate.font.MaterialDesignIconsTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/fontello_password"
                android:textColor="@color/material_cyan_A700"
                android:textSize="16dp"
                tools:ignore="SpUsage" />

            <com.csform.android.uiapptemplate.view.FloatLabeledEditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                app:fletFloatingHint="@string/password"
                app:fletHintTextColor="@color/material_cyan_A700"
                app:fletPassword="true"
                app:fletSingleLine="true"
                app:fletTextBackground="@drawable/edit_text_background_accent"
                app:fletTextColor="@color/main_color_grey_700" >
            </com.csform.android.uiapptemplate.view.FloatLabeledEditText>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="54dp"
        android:layout_marginTop="12dp"
        android:gravity="right" >

        <com.csform.android.uiapptemplate.font.RobotoTextView
            android:id="@+id/login"
            style="@style/ButtonStyle.RaisedEmpty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:background="@drawable/login_travel_selector_button"
            android:minWidth="96dp"
            android:text="@string/login"
            android:textColor="@android:color/white"
            app:typeface="robotoMedium" />

        <View
            android:layout_width="3dp"
            android:layout_height="match_parent" />

        <com.csform.android.uiapptemplate.font.RobotoTextView
            android:id="@+id/register"
            style="@style/ButtonStyle.RaisedEmpty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:background="@drawable/login_travel_selector_button"
            android:minWidth="96dp"
            android:text="@string/register"
            android:textColor="@android:color/white"
            app:typeface="robotoMedium" />
    </LinearLayout>

    <com.csform.android.uiapptemplate.font.RobotoTextView
        android:id="@+id/skip"
        style="@style/ButtonStyle.RaisedEmpty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|end"
        android:background="@drawable/transparent_button_selector"
        android:minWidth="96dp"
        android:text="@string/skip"
        android:textColor="@android:color/white" />

</LinearLayout>