<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <ImageView
        android:id="@+id/header_navigation_drawer_travel_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/left_menu_travel_small"
        android:contentDescription="@string/cd_main_image"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_vertical" >

        <com.csform.android.uiapptemplate.font.MaterialDesignIconsTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/material_icon_bike"
            android:textColor="@android:color/white"
            android:textSize="72dp" />

        <com.csform.android.uiapptemplate.font.RobotoTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/new_york"
            android:textColor="@android:color/white"
            android:textSize="32sp"
            app:typeface="robotoLight" />
    </LinearLayout>

</RelativeLayout>