<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="360dp"
    android:minHeight="360dp"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/header_parallax_media_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:minHeight="360dp"
        android:contentDescription="@string/cd_main_image"
        android:scaleType="centerCrop"
        android:src="@drawable/parallax_media_header_image" />

<!--     <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_background_media" /> -->

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" >

        <com.csform.android.uiapptemplate.font.MaterialDesignIconsTextView
            android:id="@+id/header_parallax_media_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:text="@string/material_icon_like"
            android:textColor="@android:color/white"
            android:textSize="20dp" />

        <com.csform.android.uiapptemplate.font.MaterialDesignIconsTextView
            android:id="@+id/header_parallax_media_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:text="@string/material_icon_favorite"
            android:textColor="@android:color/white"
            android:textSize="20dp" />

        <com.csform.android.uiapptemplate.font.MaterialDesignIconsTextView
            android:id="@+id/header_parallax_media_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:text="@string/material_icon_share"
            android:textColor="@android:color/white"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" >

        <com.csform.android.uiapptemplate.font.MaterialDesignIconsTextView
            android:id="@+id/header_parallax_media_previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:text="@string/material_icon_skip_previous"
            android:textColor="@android:color/white"
            android:textSize="50dp" />

        <com.csform.android.uiapptemplate.font.MaterialDesignIconsTextView
            android:id="@+id/header_parallax_media_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:text="@string/material_icon_play_single"
            android:textColor="@android:color/white"
            android:textSize="80dp" />

        <com.csform.android.uiapptemplate.font.MaterialDesignIconsTextView
            android:id="@+id/header_parallax_media_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:text="@string/material_icon_skip_next"
            android:textColor="@android:color/white"
            android:textSize="50dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:paddingBottom="8dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingTop="8dp" >

        <com.csform.android.uiapptemplate.font.RobotoTextView
            android:id="@+id/header_parallax_media_song_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:maxLines="1"
            android:layout_marginBottom="4dp"
            android:text="SongName"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            app:typeface="robotoLight" />

        <com.csform.android.uiapptemplate.font.RobotoTextView
            android:id="@+id/header_parallax_media_artist_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:maxLines="2"
            android:text="ArtistName"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            app:typeface="robotoLight" />
    </LinearLayout>

</RelativeLayout>